# startupp.chat

./: .mcp.json
.claude/: constitution.md  settings.local.json.txt
youtube-analyser/: .gitignore  README.md  check_recent_posts.py  download_channel.py  download_playlist.py  download_video.py  downloader.py  embedding_test_results_20250828_171304_with_embeddings.json  main.py  pyproject.toml  test_ai_post_generation.py  test_bluesky.py  test_bluesky_post_builder.py  test_bluesky_post_generation.py  test_bluesky_service_with_video.py  test_grapheme_count.py  test_minio.py  test_ollama_embed.py  test_persona_gemini.py  test_persona_transcription.py  test_persona_usage.py  test_refactoring.py  test_simple_link.py  test_source_files_structure.py  test_video_id_naming.py  test_video_service.py  test_youtube_download.py  test_youtube_facets.py  transcription_output.txt
youtube-analyser/examples/: 08mH36_NVos.json  basic_usage.py  playlist.json
youtube-analyser/services/: __init__.py  analysis_service.py  audio_service.py  bluesky_post_builder.py  bluesky_service.py  config_service.py  minio_service.py  transcription_service.py  video_service.py  youtube_analyzer.py  youtube_download_service.py
youtube-analyser/services/prompts/: analysis-prompt.txt  bluesky-prompt.txt  bluesky-validation-prompt.txt  linkedin-prompt.txt
youtube-downloader/: .gitignore  README.md  download-video.js  examples.js  main.js  minio-service.js  minio-test.js  package-lock.json  package.json  playlist.js  test-minio.js  test-sanitization.js  test-videos.txt  videos.js  videos.txt
(+37 files in other folders)
